--- a/detailPage.html
+++ b/detailPage.html
@@ -131,6 +131,41 @@
 	    				</div>
 	    				&nbsp;&nbsp;包邮,24小时发货
 	    			</div>
+	    			<div id="city">
+	    				<ul>
+	    					<li><a href="">北京市</a></li>
+	    					<li><a href="">天津市</a></li>
+	    					<li><a href="">上海市</a></li>
+	    					<li><a href="">重庆市</a></li>
+	    					<li><a href="">河北省</a></li>
+	    					<li><a href="">山西省</a></li>
+	    					<li><a href="">北京市</a></li>
+	    					<li><a href="">天津市</a></li>
+	    					<li><a href="">上海市</a></li>
+	    					<li><a href="">重庆市</a></li>
+	    					<li><a href="">河北省</a></li>
+	    					<li><a href="">山西省</a></li>
+	    					<li><a href="">北京市</a></li>
+	    					<li><a href="">天津市</a></li>
+	    					<li><a href="">上海市</a></li>
+	    					<li><a href="">重庆市</a></li>
+	    					<li><a href="">河北省</a></li>
+	    					<li><a href="">山西省</a></li>
+	    					<li><a href="">北京市</a></li>
+	    					<li><a href="">天津市</a></li>
+	    					<li><a href="">上海市</a></li>
+	    					<li><a href="">重庆市</a></li>
+	    					<li><a href="">河北省</a></li>
+	    					<li><a href="">山西省</a></li>
+	    					<li><a href="">北京市</a></li>
+	    					<li><a href="">天津市</a></li>
+	    					<li><a href="">上海市</a></li>
+	    					<li><a href="">重庆市</a></li>
+	    					<li><a href="">河北省</a></li>
+	    					<li><a href="">山西省</a></li>
+                            <li><a href="">安徽省</a></li>
+	    				</ul>
+	    			</div>
 	    			<div id="col">
 	    				<p>颜色：</p>
 	    				<div id="colBox">
@@ -187,15 +222,21 @@
 				<div id="nul">
 				</div>
 				<a id="last" href="">手机购买</a>
-				<!--<div id="phonema">
-					
-				</div>-->
 			</div>
+			<p>产品展示</p>
+			<img src="image/roumeiimg/2.jpg"/>
+			<img src="image/roumeiimg/s1.jpg"/>
+			<img src="image/roumeiimg/s2.jpg"/>
+			<img src="image/roumeiimg/s3.jpg"/>
+			<img src="image/roumeiimg/s4.jpg"/>
+			<img src="image/roumeiimg/s5.jpg"/>
+			<img src="image/roumeiimg/s6.jpg"/>
+			<img src="image/roumeiimg/s7.jpg"/>
+			<img src="image/roumeiimg/s8.jpg"/>
+			<img src="image/roumeiimg/s9.jpg"/>
 			
 		</div>
-		<div id="xqR">
-			
-		</div>
+		
 	</div>
 	</body>
 </html>
