--- a/login.html
+++ b/login.html
@@ -27,12 +27,12 @@
         	 	</div>
         	 	<div id="titleR">
         	 		<span>还没账号？</span>
-        	 		<a href="https://user.juanpi.com/register">立即去注册</a>
+        	 		<a href="register.html">立即去注册</a>
         	 	</div>
         	 </div> 
         	 <div id="center">
         	    <div id="log">
-        	    	<form action="" method="post">
+
         	    		<ul>
         	    			<li>
         	    				<div id="username">
@@ -40,13 +40,15 @@
         	    				  <input type="text"  id="inp1" style="width:232px;height:40px;border:0;" placeholder="手机号/邮箱/昵称"/>
                                   <div id="error"></div>
         	    				</div>
+        	    				<p id="p1"></p>
         	    			</li>
        	    			    <li>
         	    				<div id="pass">
         	    			      <div id="imgs2"></div>
-        	    				  <input type="text"  id="inp1" style="width:232px;height:40px;border:0;" placeholder="密码"/>
+        	    				  <input type="password"  id="inp2" style="width:232px;height:40px;border:0;" placeholder="密码"/>
                                   <div id="error"></div>
         	    				</div>
+        	    				<p id="p2"></p>
         	    			</li>
         	    			<li>
         	    				<div id="lef">
@@ -56,7 +58,7 @@
         	    				<a id="aa" href="https://user.juanpi.com/forget">忘记密码？</a>
         	    			</li>
        	    			    <li>
-        	    				<input type="submit" id="sub" value="登录"/>
+        	    				<input type="button" id="sub" value="登录"/>
         	    			</li>
         	    			<li>
         	    				<div id="hezuo">
@@ -72,7 +74,7 @@
          	    				<a id="bb" href="">手机快捷登录<<</a>
         	    			</li>
          	    		</ul>
-             	    </form>
+
         	    </div>
         	    <div id="tu">
         	    	<img src="image/login-bj-ad.png"/>
@@ -83,8 +85,8 @@
        
 	</body>
 </html>
-<!--<script type="text/javascript" src="js/login.js">-->
-<!--</script>-->
+<script type="text/javascript" src="js/login.js">
+</script>
 <script type="text/javascript">
 	
 </script>
