--- a/register.html
+++ b/register.html
@@ -27,21 +27,20 @@
         	 	</div>
         	 	<div id="titleR">
         	 		<span>还没账号？</span>
-        	 		<a href="https://user.juanpi.com/register">立即去注册</a>
+        	 		<a href="#">立即去注册</a>
         	 	</div>
         	 </div> 
         	 <div id="center">
         	    <div id="log">
-        	    	<form action="" method="post">
         	    		<ul>
         	    			<li>
-        	    				手机号码：<input type="text" class="input1" id="inp1" style="width:260px;height:38px"/>
+        	    				手机号码：<input type="text"  class="input1" id="inp1" style="width:260px;height:38px"/>
         	    			   <span id="sp1"> <strong id="strong"></strong>或&nbsp;<a href="https://user.juanpi.com/register/email">邮箱注册</a>
         	    			    </span>
         	    			    <p id="p1">请输入11位手机号</p>
         	    			</li>
         	    			<li>
-        	    				创建密码：<input type="password" class="input1" id="inp2" style="width:260px;height:38px"/><strong id="str1"></strong>
+        	    				创建密码：<input type="password"  class="input1" id="inp2" style="width:260px;height:38px"/><strong id="str1"></strong>
         	    			    <p id="p2"> 
         	    			    </p>
         	    			    <div id="mi">
@@ -52,7 +51,7 @@
   
         	    			</li>
         	    			<li>
-        	    				确认密码：<input type="password" class="input1" id="inp3" style="width:260px;height:38px"/><strong id="str2"></strong>
+        	    				确认密码：<input type="password"   class="input1" id="inp3" style="width:260px;height:38px"/><strong id="str2"></strong>
         	    			    <p id="p3"></p>
         	    			</li>
         	    			<li>
@@ -61,7 +60,7 @@
         	    				<p id="p4"></p>
         	    			</li>
         	    			<li>
-        	    				<input type="submit" id="sub" value="立即注册"/>
+        	    				<input type="button" id="sub" value="立即注册"/>
         	    			</li>
         	    			<li>
         	    				<input type="checkbox" id="check"/>
@@ -70,7 +69,6 @@
         	    				</span>
         	    			</li>
         	    		</ul>
-             	    </form>
         	    </div>
         	    <div id="tu">
         	    	<img src="image/login.png"/>
